update headshot and fix social icon wrapping on mobile

--- a/themes/tria-2015/source/css/style.styl
+++ b/themes/tria-2015/source/css/style.styl
@@ -136,7 +136,7 @@ aside
     display inline-block
     height 44px
     width 40px
-    margin 0 8px
+    margin 0 2px
 
     background-size 40px 44px
 
